# zksync

./: .dockerignore  .drone.yml  .env  .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .markdownlintrc  .prettier-md.json  .prettier-sol.json  .prettier-vue.json  .solhint.json  .tslintrc.js  .zcli-config.json  CHANGELOG.md  Cargo.toml  Contribute to zksync  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile  Procfile  README.md  README_CLIENT.md  README_REAL_LIFE.md  SECURITY.md  before_merging.md  clippy.toml  docker-compose copy.yml  docker-compose-runner.yml  docker-compose-runner2.yml  docker-compose.yml  dredd.yml  drone.yml  env.example  left  minilog  nano.save  (+10 more)
bellman/: .gitignore  COPYRIGHT  Cargo.toml  README.md
bellman-demo/: Cargo.toml  README.md
bellman-demo/examples/: bench.rs  sha256.rs  xor.rs
bellman-demo/src/: lib.rs  main.rs  verifier_contract.rs
bellman/src/: domain.rs  lib.rs  multicore.rs  multiexp.rs  progress_bar.rs
bellman/src/groth16/: generator.rs  mod.rs  prover.rs  verifier.rs
bellman/tests/: mimc.rs
core/circuit/: .gitignore  Cargo.toml  clippy.toml
core/circuit/src/: account.rs  allocated_structures.rs  circuit.rs  element.rs  encoder.rs  exit_circuit.rs  leaf.rs  lib.rs  operation.rs  plasma_constants.rs  signature.rs  utils.rs
core/crypto_exports/: Cargo.toml
core/crypto_exports/src/: lib.rs
core/data_restore/: Cargo.toml
core/data_restore/src/: accounts_state.rs  block_events.rs  contract_functions.rs  data_restore_driver.rs  eth_tx_helpers.rs  events.rs  events_state.rs  franklin_op_block.rs  franklin_ops.rs  franklin_transaction.rs  genesis_state.rs  helpers.rs  lib.rs  main.rs  rollup_ops.rs  storage_interactor.rs  tree_state.rs
core/eth_client/: Cargo.toml
core/eth_client/src/: lib.rs  signer.rs
core/franklin_key_generator/: Cargo.toml  FranklinVerificationKey.sol
core/franklin_key_generator/src/: depositor_key.rs  franklin_key.rs  main.rs  vk_contract_generator.rs
core/franklincircuit/: Cargo.toml
core/franklincircuit/src/: account.rs  allocated_structures.rs  circuit.rs  element.rs  lib.rs  operation.rs  utils.rs
core/key_generator/: Cargo.toml
core/key_generator/src/: depositor_key.rs  exitor_key.rs  franklin_key.rs  main.rs  read_write_keys.rs  recursive_keys.rs  transactor_key.rs  vk_contract_generator.rs
core/loadtest/: Cargo.toml
core/loadtest/src/: accounts.json  cli.rs  loadtest.json  main.rs  requests.rs  rpc_client.rs  sent_transactions.rs  test-accounts  test_accounts.rs  test_spec.rs  tps_counter.rs
core/merkle_tree/: Cargo.toml
core/merkle_tree/src/: account_tree.rs  lib.rs  parallel_smt.rs  pedersen_hasher.rs  sequential_smt.rs
core/models/: Cargo.toml
core/models/src/: AccountInfoResp.rs  abi.rs  account_info_resp.rs  config.rs  config_options.rs  ethereum.rs  lib.rs  params.rs  primitives.rs  prover_utils.rs  serialization.rs  token_db_cache.rs
core/plasma/: Cargo.toml
core/plasma/src/: lib.rs  state.rs
core/prover/: Cargo.toml  clippy.toml  used-vars
core/prover/src/: cli_utils.rs  client.rs  exit_proof.rs  lib.rs  main.rs  plonk_step_by_step_prover.rs  prover_data.rs  server.rs  witness_generator.rs
core/prover/tests/: prover.rs  tests.rs  witness_generator.rs
core/sdk/: Cargo.toml
core/sdk/src/: error.rs  lib.rs  provider.rs  signer.rs  tokens_cache.rs  types.rs  utils.rs  wallet.rs
core/sdk/tests/: integration.rs
core/server/: Cargo.toml  used-vars
core/server/src/: api_server.rs  block_proposer.rs  committer.rs  eth_sender.rs  eth_watch.rs  gas_counter.rs  leader_election.rs  lib.rs  main.rs  mempool.rs  observer_mode.rs  prometheus_exporter.rs  prover_server.rs  signature_checker.rs  state_keeper.rs  utils.rs
core/server/tests/: prover_server.rs
core/server_supervisor/: Cargo.toml
core/server_supervisor/src/: main.rs
core/spec_test/: Cargo.toml
core/spec_test/src/: main.rs
core/storage/: Cargo.toml
core/storage/migrations/: merge_migrations.py
core/storage/src/: diff.rs  (+8 more)
core/test-kit/: Cargo.toml
core/testhelper/: Cargo.toml
core/testkit/: Cargo.toml
core/witness_generator/: Cargo.toml
ff/: Cargo.toml  README.md
ff/ff_asm/: Cargo.toml
ff/ff_derive/: Cargo.toml
ff/src/: lib.rs
pairing/: .gitignore  COPYRIGHT  Cargo.toml  README.md
pairing/benches/: pairing_benches.rs
pairing/src/: lib.rs  wnaf.rs
plasma/: .env  .gitignore  Cargo.toml  README.md  diesel.toml  env.example
plasma/benches/: bench_balance_tree_update.rs
plasma/client/: README.md  index.html  package-lock.json  package.json  webpack.config.js
plasma/contracts/: .gitignore  README.md  deposit.sh  migrate.sh  migrate_local.sh  package-lock.json  package.json  setup-geth.js  start.sh  truffle-config.js  truffle.js
plasma/prover/: Cargo.toml
plasma/scripts/: deploy-client
plasma/server/: .env  .env_example  .gitignore  Cargo.toml  README.md  diesel.toml  launch.sh  run.sh  stop.sh  stop_linux.sh
plasma/src/: account.rs  balance_tree.rs  hasher.rs  lib.rs  main.rs  merkle_tree.rs  pedersen_hasher.rs  plasma.rs  plasma_state.rs  primitives.rs  schema.rs  sparse_merkle_tree.rs  update_circuit.rs  vk_contract_generator.rs
plasma/to_fix/: account_tree.rs  bench_balance_tree_update.rs.nocompile  generate_vk.rs.nocompile  prover.rs.nocompile  test_prepared_prover.rs.nocompile
plasma_cash_bonus/: .gitignore  Cargo.toml  README.md
plasma_cash_bonus/src/: lib.rs  primitives.rs
powersoftau/: .gitignore  COPYRIGHT  Cargo.toml  README.md  response_constrained  test.sh
powersoftau/src/: accumulator.rs  batched_accumulator.rs  constrained_accumulator.rs.nocompile  keypair.rs  lib.rs  parameters.rs  utils.rs
sapling-crypto/: COPYRIGHT  Cargo.toml  README.md
sapling-crypto/benches/: baby_pedersen_hash.rs  pedersen_hash.rs
sapling-crypto/examples/: bench.rs
sapling-crypto/src/: baby_group_hash.rs  baby_pedersen_hash.rs  baby_util.rs  constants.rs  eddsa.rs  group_hash.rs  interpolation.rs  lib.rs  pedersen_hash.rs  redaltbabyjubjub.rs  redaltbabyjubjub.rs.nocompile  redbabyjubjub.rs  redjubjub.rs  util.rs
(+2990 files in other folders)
