[workspace]
members = [
    # Binaries
    "core/bin/data_restore",
    "core/bin/key_generator",
    "core/bin/server",
    "core/bin/prover",
    "core/bin/parse_pub_data",
    "core/bin/regen-root-hash",
    "core/bin/block_revert",

    # Server micro-services
    "core/bin/zksync_api",
    "core/bin/zksync_core",
    "core/bin/zksync_eth_sender",
    "core/bin/zksync_event_listener",
    "core/bin/zksync_witness_generator",
    "core/bin/zksync_forced_exit_requests",

    # Libraries
    "core/lib/circuit",
    "core/lib/eth_client",
    "core/lib/eth_signer",
    "core/lib/gateway_watcher",
    "core/lib/prometheus_exporter",
    "core/lib/types",
    "core/lib/state",
    "core/lib/storage",
    "core/lib/vlog",
    "core/lib/crypto",
    "core/lib/utils",
    "core/lib/basic_types",
    "core/lib/prover_utils",
    "core/lib/config",
    "core/lib/contracts",
    "core/lib/api_client",
    "core/lib/notifier",
    "core/lib/balancer",

    # Test infrastructure
    "core/tests/test_account",
    "core/tests/testkit",
    "core/tests/loadtest",
    "core/tests/loadnext",

    # SDK section
    "sdk/zksync-rs"
]

[patch.crates-io]
ethabi = { git = "https://github.com/dvush/ethabi.git" }
