[package]
name = "bellman-demo"
version = "0.1.0"

[dependencies]
rand = "0.4"
ff = { path = "../ff", features = ["derive"] }
hex = "0.3.2"
pairing = { path = "../pairing" }
bellman = { path = "../bellman" }
sapling-crypto = { path = "../sapling-crypto" }
time = "0.1"
num-bigint = "0.2"
heapsize = "0.4.2"

#pairing = { git = 'https://github.com/matterinc/pairing' }
#bellman = { git = 'https://github.com/matterinc/bellman' }

