[package]
name = "ff"
version = "0.5.0"
authors = ["Sean Bowe <ewillbefull@gmail.com>",
    "Alex Gluchowski <alex@gluchowski.net>",
    "Alex Vlasov <alex.m.vlasov@gmail.com>"]
description = "Library for building and interfacing with finite fields"
documentation = "https://docs.rs/ff/"
homepage = "https://github.com/matterinc/ff"
license = "MIT/Apache-2.0"
repository = "https://github.com/matterinc/ff"

[dependencies]
byteorder = "1"
rand = "0.4"
ff_derive = { version = "0.4.0", path = "ff_derive", optional = true }
#ff_asm = { version = "0.0.1", path = "ff_asm", optional = true }

[features]
default = []
derive = ["ff_derive"]
#asm = ["ff_asm"]
