[package]
name = "plasma"
version = "0.1.0"

[dependencies]
rand = "0.4"
ff = { version = "0.4", features = ["derive"] }
hex = "0.3.2"
time = "0.1"
num-bigint = "0.2"
rust-crypto = "0.2"
fnv = "1.0.3"
ethkey = { git = "https://github.com/paritytech/parity-ethereum" }
ethereum-types = "0.4.0"
ethabi = "6.1.0"
web3 = { git = "https://github.com/tomusdrw/rust-web3" }

futures = "0.1.25"
futures-cpupool = "0.1.8"
crossbeam = "0.5.0"
crossbeam-utils = "0.6.1"
rayon = "1.0.3"

[dependencies.pairing]
path = "../pairing"

[dependencies.bellman]
path = "../bellman"

[dependencies.sapling-crypto]
path = "../sapling-crypto"


