[package]
name = "plasma"
version = "0.1.0"

[dependencies]
rand = "0.4"
ff = { version = "0.4", features = ["derive"] }
hex = "0.3.2"
time = "0.1"
num-bigint = "0.2"
rust-crypto = "0.2"
fnv = "1.0.3"
ethereum-types = "0.4.0"
ethabi = "6.1.0"
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
ethereum-tx-sign = "0.0.2"
rustc-hex = "2.0.1"

futures = "0.1.25"
futures-cpupool = "0.1.8"
crossbeam = "0.5.0"
crossbeam-utils = "0.6.1"
rayon = "1.0.3"
hyper = "0.12.16"
serde = "1.0.80"
serde_json = "1.0.33"
serde_derive = "1.0.80"
tokio = "0.1.13"

actix = "0.7.7"
actix-web = "0.7.14"

[dependencies.pairing]
path = "../pairing"

[dependencies.bellman]
path = "../bellman"

[dependencies.sapling-crypto]
path = "../sapling-crypto"


