[package]
name = "plasma_cash_bonus"
version = "0.1.0"

[dependencies]
rand = "0.4"
ff = { version = "0.4", features = ["derive"] }
hex = "0.3.2"
time = "0.1"
num-bigint = "0.2"
rust-crypto = "0.2"

[dependencies.pairing]
path = "../pairing"

[dependencies.bellman]
path = "../bellman"

[dependencies.sapling-crypto]
path = "../sapling-crypto"


