[package]
name = "powersoftau"
version = "0.1.2"
authors = ["Sean Bowe", "Alex Vlasov"]
license = "MIT/Apache-2.0"

description = "Communal zk-SNARK MPC for Public Parameters"
documentation = "https://docs.rs/powersoftau/"
homepage = "https://github.com/ebfull/powersoftau"
repository = "https://github.com/ebfull/powersoftau"

[dependencies]
rand = "0.4"
crossbeam = "0.3.0"
num_cpus = "1.7.0"
blake2 = "0.6.1"
generic-array = "0.8.3"
typenum = "1.9.0"
byteorder = "1.1.0"
hex-literal = "0.1"
rust-crypto = "0.2"
ff = { version = "0.4", features = ["derive"] }
pairing = { git = 'https://github.com/matterinc/pairing', features = ["expose-arith"] }
bellman = { git = 'https://github.com/matterinc/bellman'}

[features]

