[package]
authors = ["Sean Bowe <sean@z.cash>", "Alex Vlasov <alex.m.vlasov@gmail.com>"]
description = "Cryptographic library for Zcash Sapling with more content"
documentation = "https://github.com/matterinc/sapling-crypto"
homepage = "https://github.com/matterinc/sapling-crypto"
license = "MIT/Apache-2.0"
name = "sapling-crypto"
repository = "https://github.com/matterinc/sapling-crypto"
version = "0.0.2"

[lib]
crate-type = ["lib", "staticlib"]
 
[dependencies]
rand = "0.4"
digest = "0.7"
byteorder = "1"
ff = { path = "../ff", features = ["derive"] }
pairing = { path = "../pairing", features = ["expose-arith"]}
bellman = { path = "../bellman" }
serde = "1.0.80"
serde_derive = "1.0.80"

#pairing = { git = 'https://github.com/matterinc/pairing', features = ["expose-arith"] }
#bellman = { git = 'https://github.com/matterinc/bellman'}

[dependencies.blake2-rfc]
git = "https://github.com/gtank/blake2-rfc"
rev = "7a5b5fc99ae483a0043db7547fb79a6fa44b88a9"

[dev-dependencies]
hex-literal = "0.1"
rust-crypto = "0.2"
