[package]
name = "circuit"
version = "0.1.1"
edition = "2018"

authors = [
    "Alex Gluchowski <alex@gluchowski.net>",
    "Alex Vlasov <alex.m.vlasov@gmail.com>"
]

[features]
default = []
playground = []

[dependencies]
models = { path = "../models", version = "0.0.1" }
plasma = { path = "../plasma", version = "0.1.1" }
crypto_exports = { path = "../crypto_exports", version = "0.1.0" }
rust-crypto = "0.2"
hex = "0.4"
num-traits = "0.2"
log = "0.4"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.0"
web3 = "0.10.0"

[dev-dependencies]
testkit = { path = "../testkit", version = "0.1.0"}
bigdecimal = { version = "0.1.0", features = ["serde"]}
