[package]
name = "crypto_exports"
version = "0.1.0"
authors = ["Matter Labs"]
edition = "2018"

[dependencies]
# franklin_crypto = { package = "franklin-crypto", git = "https://github.com/matter-labs/franklin-crypto.git", branch="plonk"}
franklin_crypto = { package = "franklin-crypto", git = "https://github.com/matter-labs/franklin-crypto.git", branch="check-franklin-circuit-transpile"}
# franklin_crypto = { package = "franklin-crypto", path = "../../../franklin-crypto" }
rand = "0.4"