[package]
name = "crypto_exports"
version = "0.1.0"
authors = ["Matter Labs"]
edition = "2018"

[dependencies]
# franklin_crypto = { package = "franklin-crypto", git = "https://github.com/matter-labs/franklin-crypto.git", branch="plonk"}
franklin_crypto = { package = "franklin-crypto", git = "https://github.com/matter-labs/franklin-crypto.git", rev="88376464a3c558efd99430e4ed6689224af2368c"}
# franklin_crypto = { package = "franklin-crypto", path = "../../../franklin-crypto" }
rand = "0.4"
