[package]
name = "data_restore"
version = "0.1.0"
edition = "2018"

[dependencies]
bigdecimal = { version = "0.1.0", features = ["serde"]}
tiny-keccak = "1.4.2"
ethabi = "9.0.0"
web3 = "0.10.0"
hex = "0.4"
lazy_static = "1.2.0"
crypto_exports = { path = "../crypto_exports", version = "0.1.0" }
log = "0.4"
serde_json = "1.0.0"
env_logger = "0.6"
signal-hook = { version = "0.1.8", features = ["tokio-support"] }
failure = "0.1"
clap = "2.33.0"
futures = { version = "0.3", features = ["compat"] }
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }

plasma = { path = "../plasma", version = "0.1.1" }
models = { path = "../models", version = "0.0.1" }
storage = { path = "../storage", version = "0.0.1" }
