[package]
name = "eth_client"
version = "0.1.0"
edition = "2018"

[dependencies]
models = { package = "franklinmodels", path = "../franklinmodels" }
serde = "1.0.90"
serde_derive = "1.0.90"
ethereum-types = "0.4.0"
ethabi = "6.1.0"
web3 = "0.6.0"
ethereum-tx-sign = "0.0.2"
futures = "0.1.28"
rlp = "0.3.0"
tiny-keccak = "1.4.2"
secp256k1 = "0.11.1"
log = "0.4"
