[package]
name = "eth_client"
version = "0.1.0"
edition = "2018"

[dependencies]
models = {  path = "../models", version = "0.0.1" }
serde = "1.0.90"
serde_derive = "1.0.90"
ethabi = "8.0.0"
web3 = "0.8.0"
ethereum-tx-sign = "0.0.2"
futures = { version = "0.3", features = ["compat"] }
rlp = "0.4.0"
tiny-keccak = "1.4.2"
secp256k1 = "0.11.1"
log = "0.4"
failure = "0.1"
