[package]
name = "franklincircuit"
version = "0.1.1"
edition = "2018"

authors = [
    "Alex Gluchowski <alex@gluchowski.net>",
    "Alex Vlasov <alex.m.vlasov@gmail.com>"
]

[dependencies]
merkle_tree = { path = "../merkle_tree" }
models = { path = "../models" }
franklinmodels = { path = "../franklinmodels" }
pairing = { package = "pairing_ce", version = "0.17.0" }
bellman = { package = "bellman_ce", version = "0.3.0" }
franklin_crypto = { package = "franklin-crypto", git = "ssh://git@github.com/matter-labs/franklin-crypto.git", branch = "new_gadgets" }
ff = { package = "ff_ce", version = "0.6.0", features = ["derive"] }
rand = "0.4"
rust-crypto = "0.2"
hex = "0.3.2"
