[package]
name = "key_generator"
version = "0.1.1"
edition = "2018"

authors = [
    "Alex Gluchowski <alex@gluchowski.net>",
    "Alex Vlasov <alex.m.vlasov@gmail.com>"
]

[dependencies]
time = "0.1"
crypto_exports = { path = "../crypto_exports", version = "0.1.0" }
models = { path = "../models", version = "0.0.1" }
circuit= { path = "../circuit", version = "0.1.1" }
hex = "0.3.2"
rust-crypto = "0.2"
log = "0.4"
env_logger = "0.6"
clap = "2.33.0"
