[package]
name = "loadtest"
version = "0.1.0"
authors = ["furkhat <vailodf@gmail.com>"]
edition = "2018"

[dependencies]
models = { path = "../models", version = "0.0.1" }
testkit = { path = "../testkit", version = "0.1.0"}

serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.0"

web3 = "0.8.0"

hex = "0.4"

futures = { version = "0.3", features = ["compat"] }

failure = "0.1"

bigdecimal = { version = "0.1.0", features = ["serde"]}

reqwest = "0.9.22"

log = "0.4"

env_logger = "0.6"

rand = "0.4"

jsonrpc-core = "14.0.3"
