[package]
name = "loadtest"
version = "0.1.0"
authors = ["furkhat <vailodf@gmail.com>"]
edition = "2018"

[dependencies]
models = { path = "../models", version = "0.0.1" }
testkit = { path = "../testkit", version = "0.1.0"}
server = { path = "../server", version = "0.0.1" }

serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.0"

web3 = "0.10.0"
futures = { version = "0.3", features = ["compat"] }
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["json"] }
hyper = "0.13.4"

jsonrpc-core = "14.0.3"

hex = "0.4"
failure = "0.1"
bigdecimal = { version = "0.1.0", features = ["serde"]}
rand = "0.4"
log = "0.4"
env_logger = "0.6"
structopt = "0.3"
chrono = "0.4"
