[package]
name = "models"
version = "0.0.1"
edition = "2018"

[dependencies]
ff = { package = "ff_ce", version = "0.6.0", features = ["derive"] }
bigdecimal = { version = "0.1.0", features = ["serde"]}
pairing = { package = "pairing_ce", version = "0.17.0" }
franklin_crypto = { package = "franklin-crypto", git = "https://github.com/matter-labs/franklin-crypto.git", branch="master"}
bellman = { package = "bellman_ce", version = "0.3.0" }
ethabi = "8.0.0"
web3 = "0.8.0"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_bytes = "0.11.1"
serde_json = "1.0.0"
lazy_static = "1.2.0"
rayon = "1.0.3"
rand = "0.4"
fnv = "1.0.3"
rust-crypto = "0.2"
hex = "0.3"
failure = "0.1"
log = "0.4"
futures = { version = "0.3", features = ["compat"] }
ethsign = "0.7.3"
tiny-keccak = "1.4.2"
