[package]
name = "models"
version = "0.0.1"
edition = "2018"

[dependencies]
bigdecimal = { version = "0.1.0", features = ["serde"]}
crypto_exports = { path = "../crypto_exports", version = "0.1.0" }

ethabi = "8.0.0"
web3 = "0.8.0"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_bytes = "0.11.1"
serde_json = "1.0.0"
lazy_static = "1.2.0"
rayon = "1.0.3"
fnv = "1.0.3"
rust-crypto = "0.2"
hex = "0.3"
failure = "0.1"
log = "0.4"
futures = { version = "0.3", features = ["compat"] }
ethsign = "0.7.3"
tiny-keccak = "1.4.2"
