[package]
name = "plasma"
version = "0.1.1"
edition = "2018"

authors = [
    "Alex Gluchowski <alex@gluchowski.net>",
    "Alex Vlasov <alex.m.vlasov@gmail.com>"
]

[dependencies]
models = { path = "../models" }
merkle_tree = { path = "../merkle_tree" }
bigdecimal = { version = "0.0.14", features = ["serde"]}
log = "0.4"
failure = "0.1"
ff = { package = "ff_ce", version = "0.6.0", features = ["derive"] }

