[package]
name = "prover"
version = "0.0.1"
edition = "2018"

[dependencies]
plasma = { path = "../plasma", version = "0.1.1" }
models = { path = "../models", version = "0.0.1" }
storage = { path = "../storage", version = "0.0.1" }
circuit = { path = "../circuit", version = "0.1.1"}
crypto_exports = { path = "../crypto_exports", version = "0.1.0" }

hex = "0.4"
rust-crypto = "0.2"

web3 = "0.8.0"
signal-hook = "0.1.8"
tokio = "0.1.18"
futures = "0.1.28"

fnv = "1.0.6"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.0"
diesel = { version = "1.4.2", features = ["postgres", "serde_json", "r2d2", "chrono"] }
bigdecimal = { version = "0.1.0", features = ["serde"]}
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
log = "0.4"
env_logger = "0.6"
num-traits = "0.2"
actix-web = "1.0"
reqwest = { version = "0.10.4", feautres = ["blocking", "json"] }
failure = "0.1"
backoff = "0.1.6"
clap = "2.33.0"
ctrlc = "3.1"

[dev-dependencies]
testhelper = { path = "../testhelper", version = "0.1.0"}
