[package]
name = "sdk"
version = "0.1.0"
authors = ["Thor Kamphefner <thor@matterlabs.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "../models", version = "0.0.1" }
server = { path = "../server", version = "0.0.1" }
crypto_exports = { path = "../crypto_exports", version = "0.1.0" }
franklin_crypto = { package = "franklin-crypto", git = "https://github.com/matter-labs/franklin-crypto.git", branch="check-franklin-circuit-transpile"}

#zks_crypto = { package = "zks-crypto", git = "https://github.com/matter-labs/zks-crypto.git"}
bellman = { package = "bellman_ce", git = "https://github.com/matter-labs/bellman", branch = "plonk_release" }
sha2 = "0.8"
web3 = "0.10.0"

serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.0"

reqwest = { version = "0.10", features = ["json", "blocking"] }
anyhow = "1.0"

jsonrpc-core = "14.0.3"

num = { version = "0.2", features = ["serde"] }
