[package]
name = "server"
version = "0.0.1"
edition = "2018"

[dependencies]
eth_client = { path = "../eth_client", version = "0.1.0"  }
plasma = { path = "../plasma", version = "0.1.1" }
models = { path = "../models", version = "0.0.1" }
storage = { path = "../storage", version = "0.0.1" }

ff = { package = "ff_ce", version = "0.6.0", features = ["derive"] }
pairing = { package = "pairing_ce", version = "0.17.0" }
franklin_crypto = { package = "franklin-crypto", git = "https://github.com/matter-labs/franklin-crypto.git", branch="master"}

rand = "0.4"
hex = "0.3.2"
time = "0.1"
num-bigint = "0.2"
rust-crypto = "0.2"
fnv = "1.0.3"
ethabi = "8.0.0"
web3 = "0.8.0"
rustc-hex = "2.0.1"
hyper = "0.12.16"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_bytes = "0.11.1"
serde_json = "1.0.0"
log = "0.4"
env_logger = "0.6"
itertools = "0.8"
clap = "2.33.0"
jsonrpc-core = "14.0.3"
jsonrpc-core-client = "14.0.3"
jsonrpc-pubsub = "14.0.3"
jsonrpc-ws-server = "14.0.3"
jsonrpc-http-server = "14.0.3"
jsonrpc-derive = "14.0.3"


im = "12.2.0"
priority-queue = "0.5.2"
num-traits = "0.2"

rayon = "1.0.3"

tokio = { version = "0.2", features = ["full"] }
futures = { version = "0.3", features = ["compat"] }
actix-rt = "0.2.5"
actix-cors = "0.1.0"
actix = "0.8.3"
actix-web = "1.0.8"

bigdecimal = { version = "0.1.0", features = ["serde"]}
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
diesel = { version = "1.4.3", features = ["postgres", "serde_json", "r2d2", "chrono"] }
ctrlc = "3.1"
failure = "0.1"
# should be removed after actix is updated
futures01 = { package = "futures", version = "0.1" }