[package]
name = "server"
version = "0.0.1"
edition = "2018"

[dependencies]
eth_client = { path = "../eth_client", version = "0.1.0"  }
plasma = { path = "../plasma", version = "0.1.1" }
models = { path = "../models", version = "0.0.1" }
storage = { path = "../storage", version = "0.0.1" }
prover = { path = "../prover", version = "0.0.1" }
circuit = { path = "../circuit", version = "0.1.1"}

crypto_exports = { path = "../crypto_exports", version = "0.1.0" }

hex = "0.4"
ethabi = "9.0.0"
web3 = "0.10.0"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.0"
log = "0.4"
env_logger = "0.6"
itertools = "0.8"
clap = "2.33.0"
jsonrpc-core = "14.0.3"
jsonrpc-core-client = "14.0.3"
jsonrpc-pubsub = "14.0.3"
jsonrpc-ws-server = "14.0.3"
jsonrpc-http-server = "14.0.3"
jsonrpc-derive = "14.0.3"

tokio = { version = "0.2", features = ["full"] }
tokio_old = { package = "tokio", version = "0.1.22" }
futures = { version = "0.3", features = ["compat"] }
actix-rt = "0.2.5"
actix-cors = "0.1.0"
actix-web = "1.0.8"

num = { version = "0.2", features = ["serde"] }
bigdecimal = { version = "0.1", features = ["serde"]}
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
ctrlc = "3.1"
failure = "0.1"
# TODO: should be removed after json rpc deps are updated is updated, current version (14.0)
futures01 = { package = "futures", version = "0.1" }
reqwest = "0.9.22"
tiny-keccak = "1.4.2"

lru-cache = "0.1.2"

[dev-dependencies]
lazy_static = "1.4"
